objects/agf__ADM_Coverage__c.object
<CustomObject>
    <description>Displays the code coverage numbers by feature</description>
    <fields>
        <fullName>agf__Actual_Coverage__c</fullName>
        <label>Actual Coverage (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Code_Coverage_Goal_Met__c</fullName>
        <formula>IF(  agf__Coverage_Gap__c &gt;=0, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Coverage Goal Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Coverage_Gap__c</fullName>
        <formula>agf__Actual_Coverage__c - agf__Target_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Link_to_actual_report__c</fullName>
        <label>Link to actual report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Min_Package_Coverage_Met__c</fullName>
        <formula>IF(agf__Actual_Coverage__c&gt;=0.2, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Package Coverage Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Module_Name__c</fullName>
        <label>Module Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__NCLOC__c</fullName>
        <label>NCLOC</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Package_Name__c</fullName>
        <label>Package Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Report_ID__c</fullName>
        <label>Report ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Coverage</relationshipLabel>
        <relationshipName>Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Feature_Code_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Target_Coverage__c</fullName>
        <label>Target Coverage (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__statement__c</fullName>
        <label># of statement</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Coverage</label>
    <listViews>
        <fullName>agf__APIteamowned</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Target_Coverage__c</columns>
        <columns>agf__Coverage_Gap__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>contains</operation>
            <value>API</value>
        </filters>
        <label>API team owned</label>
    </listViews>
    <listViews>
        <fullName>agf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All_d_2</fullName>
        <columns>NAME</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Target_Coverage__c</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Coverage_Gap__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__Caltivites_Coverage</fullName>
        <columns>NAME</columns>
        <columns>agf__Module_Name__c</columns>
        <columns>agf__Min_Package_Coverage_Met__c</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Target_Coverage__c</columns>
        <columns>agf__Coverage_Gap__c</columns>
        <columns>agf__Code_Coverage_Goal_Met__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Calendar and Activities</value>
        </filters>
        <label>Caltivites Coverage</label>
    </listViews>
    <listViews>
        <fullName>agf__KMSTowned</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Target_Coverage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Search</value>
        </filters>
        <label>Search owned</label>
    </listViews>
    <listViews>
        <fullName>agf__PackageCoveragetemp</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Module_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
        </filters>
        <label>PLSQL Package Coverage</label>
    </listViews>
    <listViews>
        <fullName>agf__Package_Coverage</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Module_Name__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>agf__NCLOC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Coverage__c.agf__Package</value>
        </filters>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
        </filters>
        <label>Coverage of package w/o Scrum team</label>
    </listViews>
    <listViews>
        <fullName>agf__Package_Coverage_Core</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Module_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Coverage__c.agf__Package</value>
        </filters>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Core Infrastructure</value>
        </filters>
        <label>Package Coverage (Core)</label>
    </listViews>
    <listViews>
        <fullName>agf__SFA_Core_Coverage</fullName>
        <columns>NAME</columns>
        <columns>agf__Module_Name__c</columns>
        <columns>agf__Min_Package_Coverage_Met__c</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Target_Coverage__c</columns>
        <columns>agf__Coverage_Gap__c</columns>
        <columns>agf__Code_Coverage_Goal_Met__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>contains</operation>
            <value>SFA Core</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
        </filters>
        <label>SFA Core Java Coverage</label>
    </listViews>
    <listViews>
        <fullName>agf__SFA_Core_PLSQL_Package_Coverage</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Module_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
        </filters>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>SFA Core</value>
        </filters>
        <label>SFA Core PLSQL Coverage</label>
    </listViews>
    <listViews>
        <fullName>agf__SFA_Forecasting_Java_Coverage</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Code_Coverage_Goal_Met__c</columns>
        <columns>agf__Min_Package_Coverage_Met__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>SFA Forecasting</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Coverage__c.agf__Package</value>
        </filters>
        <label>SFA Forecasting Java Coverage</label>
    </listViews>
    <listViews>
        <fullName>agf__SFA_Forecasting_PLSQL_Coverage</fullName>
        <columns>NAME</columns>
        <columns>agf__Min_Package_Coverage_Met__c</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>SFA Forecasting</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Coverage__c.agf__PLSQL_Package</value>
        </filters>
        <label>SFA Forecasting  PLSQL Coverage</label>
    </listViews>
    <listViews>
        <fullName>agf__SharingTeamOwned</fullName>
        <columns>NAME</columns>
        <columns>agf__Actual_Coverage__c</columns>
        <columns>agf__Target_Coverage__c</columns>
        <columns>agf__Coverage_Gap__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>App Security and Sharing</value>
        </filters>
        <label>Sharing Team Owned</label>
    </listViews>
    <nameField>
        <label>Feature/Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage</pluralLabel>
    <recordTypes>
        <fullName>agf__Feature</fullName>
        <active>true</active>
        <description>Used to track feature specific coverage info</description>
        <label>Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__PLSQL_Package</fullName>
        <active>true</active>
        <description>Used to track PLSQL package coverage</description>
        <label>PLSQL Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Package</fullName>
        <active>true</active>
        <description>Used to track coverage info of each java package</description>
        <label>Package</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>